Version 1.2.20 - 13 August 2009, by Aurelien Lefebvre

- Call fsync after writing to ensure that files are written

Version 1.2.19 - 09 June 2009, by Eugeni Dodonov

- Correctly handling '#' when loading shell variables (#50670, #51457).

Version 1.2.18 - 14 April 2009, by Pascal Terjan

- decode ' inside '' properly in getVarsFromSh

Version 1.2.17 - 10 March 2009, by Pascal Terjan

- protect various chars in setExportedVarsInSh and setExportedVarsInCsh
- quote correctly ' inside ''

Version 1.2.16 - 2 February 2009, by Pascal Terjan

- protect ;<>&#[]~{}*? in setVarsInSh

Version 1.2.15 - 26 January 2009, by Pascal Terjan

- protect parenthesis in setVarsInSh and drop dead code (#47298)

Version 1.2.14 - 1 October 2008, by Pascal "Pixel" Rigaux

- round_up(), round_down(): workaround "Illegal modulus zero" (#43165)

Version 1.2.13 - 9 September 2008, by Pascal "Pixel" Rigaux

- export cat_utf8() and cat_utf8_or_die()

Version 1.2.12 - 3 April 2008, by Olivier "blino" Blin

- fix crash introduced in previous release

Version 1.2.11 - 3 April 2008, by Olivier "blino" Blin

- workaround glibc misconfiguration that make users listed twice
  (#34279)

Version 1.2.10 - 18 January 2008, by Pascal "Pixel" Rigaux

- modify before_leaving() to be compatible with perl 5.10.0

Version 1.2.9 - 11 September 2007, by Thierry Vignaud

- fix including the doc of sub-modules

Version 1.2.8 - 04 September 2007, by Thierry Vignaud

- make formatError() work with any modules (#33131)

Version 1.2.7 - 09 August 2007, by Thierry Vignaud

- fix installer breakage

Version 1.2.6 - 06 August 2007, by Thierry Vignaud

- make find_index() pinpoint the actual bug (ie the caller)
- make formatError() safer (managing exceptions containing " at ")

Version 1.2.5 - 30 May 2007, by Pascal "Pixel" Rigaux

- enhance fuzzy_pidofs() to handle kernel processes