@@ -1,6 +1,7 @@
 Version 1.2.20 - 13 August 2009, by Aurelien Lefebvre
 
 - Call fsync after writing to ensure that files are written
+- fix df on mips, statfs structure is different from x86
 
 Version 1.2.19 - 09 June 2009, by Eugeni Dodonov
 
